# UserAuthTest

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
core/apps/auth_app/: apps.py  urls.py
core/project/: urls.py
core/project/settings/: main.py
docker_compose/: storages.yaml
